# pytket-phir

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  genindex.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytket.phir.html  pytket.phir.rebasing.html  pytket.phir.sharding.html  requirements.txt  ruff.toml  search.html  searchindex.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit-au.yml  python-app.yml  python-publish.yml
_sources/: index.rst.txt
docs/: build-docs.sh  conf.py  index.rst  pytket.phir.rebasing.rst  pytket.phir.rst
docs/source/: conf.py  index.rst  modules.rst  phir.rst  phir.sharding.rst  pytket.phir.rst  pytket.phir.sharding.rst
pytemplate/: __init__.py  main.py  utils.py
pytket/: routing.py
pytket/phir/: __init__.py  api.py  cli.py  machine.py  machine_class.py  main.py  pandr.py  phirgen.py  phirgen_parallel.py  place_and_route.py  placement.py  qtm_machine.py  routing.py  utils.py
pytket/phir/rebasing/: rebaser.py
pytket/phir/sharding/: shard.py  sharder.py  shards2ops.py
routing/: routing.py
tests/: brickwork_circuit.txt  e2e_test.py  jonhas_test.py  lattice_circuit.txt  sample_data.py  test.py  test_api.py  test_machine_class.py  test_main.py  test_parallel_subcommand_relative_ordering.py  test_parallel_tk2.py  test_parallelization.py  test_phirgen.py  test_placement.py  test_pll_tk2.py  test_rebaser.py  test_routing.py  test_scratch.py  test_shard.py  test_sharder.py  test_utils.py  test_wasm.py
tests/data/: phase.json
tests/data/qasm/: arbitrary_qreg_names.qasm  baby.qasm  baby_with_rollup.qasm  barrier_complex.qasm  bell.qasm  big_gate.qasm  classical_hazards.qasm  classical_ordering.qasm  cond_1.qasm  cond_barrier.qasm  cond_classical.qasm  exec_order_two_qubits.qasm  eztest.qasm  group_ordering.qasm  n10_test.qasm  oned_brickwork_circuit_n20.qasm  parallelization_test.qasm  qv20_0.qasm  rxrz.qasm  rz_exec_order_three_qubits.qasm  simple.qasm  simple_cond.qasm  single_qubit_parallel_test.qasm  sleep.qasm  tk2.qasm  tk2_diff_angles.qasm  tk2_same_angle.qasm
tests/data/wasm/: testfile.wat
