[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "pytket-phir"
version = "0.0.1"
description = "A circuit analyzer and translator from pytket to PHIR"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Quantinuum"}]

dependencies = ["phir>=0.1.5", "pytket"]

[project.optional-dependencies]
tests = ["pytest"]

docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Repository = "https://github.com/CQCL/pytket-phir.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pytket.phir" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-s -vv"
pythonpath = [
  "."
]
log_cli = true
log_cli_level = "INFO"
filterwarnings = ["ignore:::lark.s*"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
