[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "pytket-phir"
description = "A circuit analyzer and translator from pytket to PHIR"
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = {file = "LICENSE"}
authors = [{name = "Quantinuum"}]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "phir>=0.1.6",
  "pytket-quantinuum",
  "pytket",
  ]

[project.optional-dependencies]
docs = ["sphinx", "pydata_sphinx_theme"]
# phirc = ["quantum-pecos@git+https://github.com/PECOS-packages/PECOS.git@e2e-testing"]
tests = ["pytest"]

[project.scripts]
phirc = "pytket.phir.cli:main"

[project.urls]
Changelog = "https://github.com/CQCL/pytket-phir/blob/main/CHANGELOG.md"
Documentation = "https://cqcl.github.io/pytket-phir/"
Repository = "https://github.com/CQCL/pytket-phir.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pytket.phir" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-s -vv"
pythonpath = [
  "."
]
log_cli = true
log_cli_level = "INFO"
filterwarnings = ["ignore:::lark.s*"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
