[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "pytket-phir"
description = "A circuit analyzer and translator from pytket to PHIR"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { file = "LICENSE" }
authors = [{ name = "Quantinuum" }]
maintainers = [
  { name = "Kartik Singhal", email = "Kartik.Singhal@quantinuum.com" },
]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "phir>=0.3.2",
  "pytket>=1.21.0",
  "wasmtime>=15.0.0",
  ]

[project.optional-dependencies]
docs = ["sphinx", "pydata_sphinx_theme"]
phirc = ["projectq", "quantum-pecos>=0.6.0.dev2"]
tests = ["pytest"]

[project.scripts]
phirc = "pytket.phir.cli:main"

[project.urls]
Changelog = "https://github.com/CQCL/pytket-phir/blob/main/CHANGELOG.md"
Documentation = "https://cqcl.github.io/pytket-phir/"
Repository = "https://github.com/CQCL/pytket-phir.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pytket.phir" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-s -vv"
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
log_level = "DEBUG"
filterwarnings = ["ignore:::lark.s*"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)s %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[tool.refurb]
python_version = "3.10"
